--- a/modulOne/index.html
+++ b/modulOne/index.html
@@ -4,6 +4,10 @@
 	<meta charset="utf-8">
 	<title>SweetNails</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="icon" type="image/png" href="favicon.png">
+
+	<meta name="description" content="Найти в Пензе маникюр на дому, Качественный маникюр в Пензе">
+	<meta name="keywords" content="Пенза, мфникюр, ногти на дому, портфолио мастера по маникюру">
 	<meta name="viewport" content="width=device-width, initial-scale=1"></head>
 </head>
 <body>
@@ -19,6 +23,14 @@
 				<li class="navMenuItem"><a href="#palette">Палитра</a></li>
 				<li class="navMenuItem"><a href="#contacts">Контакты</a></li>
 			</ul>
+			<div class="helpMenu">
+				<input type="checkbox" id="checkMenu">
+				<label for="checkMenu"></label>
+				<div class="burgerLine first"></div>
+				<div class="burgerLine second"></div>
+				<div class="burgerLine third"></div>
+				<div class="burgerLine fourth"></div>
+			</div>
 		</nav>
 		<div class="HeaderWrapper">
 			<div class="headerName">Карина Франц</div>
@@ -26,6 +38,7 @@
 		</div>
 	</header>
 	<main>
+		<!-- обо мне -->
 		<section class="about" id="about">
 			<div class="aboutWrapper">
 				<div class="aboutWrapperName">Обо мне</div>
@@ -34,7 +47,7 @@
 				</div>
 			</div>
 		</section>
-
+<!-- Примеры работ -->
 		<section class="gallery" id="gallery">
 			<div class="galleryWrapper">
 				<div class="galleryHeadline">
@@ -48,40 +61,43 @@
 						</div>
 					</div>
 					<div class="galleriItem">
-						<img src="img/nailsMini1.jpg">
+						<img src="img/nailsMini2.jpg">
 						<div class="galleriItemPortrait">
-							Френч
+							Градиент
 						</div>
 					</div>
 					<div class="galleriItem">
-						<img src="img/nailsMini1.jpg">
+						<img src="img/nailsMini3.jpg">
 						<div class="galleriItemPortrait">
-							Френч
+							Геометрия
 						</div>
 					</div>
 					<div class="galleriItem">
-						<img src="img/nailsMini1.jpg">
+						<img src="img/nailsMini4.jpg">
 						<div class="galleriItemPortrait">
-							Френч
+							Однотонное покрытие
 						</div>
 					</div>
 					<div class="galleriItem">
-						<img src="img/nailsMini1.jpg">
+						<img src="img/nailsMini5.jpg">
 						<div class="galleriItemPortrait">
-							Френч
+							Лунный маникюр
 						</div>
 					</div>
 					<div class="galleriItem">
-						<img src="img/nailsMini1.jpg">
+						<img src="img/nailsMini6.jpg">
 						<div class="galleriItemPortrait">
-							Френч
+							Матовое покрытие
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-
+<!-- цены -->
 		<section class="price" id="price">
+			<div class="priceName">
+				Прайс
+			</div>
 			<div class="priceWrapper">
 				<ul class="priceWrapperList">
 					<li class="priceWrapperListItem">
@@ -105,7 +121,7 @@
 				</ul>
 			</div>
 		</section>
-
+<!-- Палитра -->
 		<section class="palette" id="palette">
 			<div class="palleteWrapper">
 				<div class="paletteName">
@@ -113,22 +129,13 @@
 				</div>
 				<div class="palleteSlider">
 					<ul class="accordion">
-						<li class="item1"></li>
-						<li class="item2"></li>
-						<li class="item3"></li>
-						<li class="item4"></li>
-						<li class="item5"></li>
-						<li class="item6"></li>
-						<li class="item7"></li>
-					</ul>
-				<ul class="accordion">
-						<li> <img src="img/pallete11.jpg" center center></li>
-						<li> <img src="img/pallete22.jpg" center center></li>
-						<li> <img src="img/pallete33.jpg" center center></li>
-						<li> <img src="img/pallete44.jpg" center center></li>
-						<li> <img src="img/pallete55.jpg" center center></li>
-						<li> <img src="img/pallete66.jpg" center center></li>
-						<li> <img src="img/pallete77.jpg" center center></li>
+						<li> <img src="img/pallete11.jpg"></li>
+						<li> <img src="img/pallete22.jpg"></li>
+						<li> <img src="img/pallete33.jpg"></li>
+						<li> <img src="img/pallete44.jpg"></li>
+						<li> <img src="img/pallete55.jpg"></li>
+						<li> <img src="img/pallete66.jpg"></li>
+						<li> <img src="img/pallete77.jpg"></li>
 					</ul>
 				</div>
 			</div>
