--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <a href="https://docs.google.com/document/d/15EITVxn6KbJTgRFqCSsKMoEpBH127MlqVlbSghuAhx0/edit?usp=sharing">Резюме</a>
     <a href="https://github.com/">Ссылка GidHab</a>
 
-    <a href="htmlCSS - 1/index.html">html + CSS - 1</a>
-    <a href="htmlCSS - 2/index.html">html + CSS - 2</a>
+    <a href="htmlCSSone/index.html">html + CSS - 1</a>
+    <a href="htmlCSStwo/index.html">html + CSS - 2</a>
 
 
 </body>
