--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <a href="modulOne/index.html">Экзамен №1</a>
     <a href="modulTwo/index.html">Экзамен №2</a>
     <a href="https://docs.google.com/document/d/15EITVxn6KbJTgRFqCSsKMoEpBH127MlqVlbSghuAhx0/edit?usp=sharing">Резюме</a>
-    <a href="https://github.com/">Ссылка GidHab</a>
+    <a href="https://github.com/goGetttter">Ссылка GidHab</a>
 
     <a href="htmlCSSone/index.html">html + CSS - 1</a>
     <a href="htmlCSStwo/index.html">html + CSS - 2</a>
