Первый набросок Портфолио

--- a/htmlCSStwo/index.html
+++ b/htmlCSStwo/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>2019</title>
+	<title>Закрепление верстки</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
