--- a/index.html
+++ b/index.html
@@ -3,17 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="description" content="Пенза, web-developer, portfolio. Веб-разработчик в пензе">
+    <meta name="keywords" content="Пенза, web-developer, portfolio">
     <title>Document</title>
 </head>
 <body>
-    <a href="modulOne/index.html">Экзамен №1</a>
-    <a href="modulTwo/index.html">Экзамен №2</a>
-    <a href="https://docs.google.com/document/d/15EITVxn6KbJTgRFqCSsKMoEpBH127MlqVlbSghuAhx0/edit?usp=sharing">Резюме</a>
-    <a href="https://github.com/goGetttter">Ссылка GidHab</a>
 
-    <a href="htmlCSSone/index.html">html + CSS - 1</a>
-    <a href="htmlCSStwo/index.html">html + CSS - 2</a>
+
+    <div class="item">Портфолио web-developer</div>
+    <div class="item">Архипов А.В.</div>
+    <div class="item">Здесь должно быть что то о себе...</div>
+    <div class="item">У меня есть ссылочки   (;</div>
+
+    <div class="links">
+        <div class="aboutWhat">Пару домашек по HTML + CSS</div>
+        <div><a href="htmlCSSone/index.html">html + CSS - 1</a></div>
+        <div><a href="htmlCSStwo/index.html">html + CSS - 2</a></div>
+        <div class="aboutWhat">Итоговые работы</div>
+        <div><a href="modulOne/index.html">Экзамен №1</a></div>
+        <div><a href="modulTwo/index.html">Экзамен №2</a></div>
+        <div class="aboutWhat">Ссылки на меня</div>
+        <div><a href="https://docs.google.com/document/d/15EITVxn6KbJTgRFqCSsKMoEpBH127MlqVlbSghuAhx0/edit?usp=sharing">Резюме</a></div>
+        <div><a href="https://github.com/goGetttter">Ссылка GidHab</a></div>
+        <div><a href="https://vk.com/id49449882">VK</a></div>
+    </div>
+
 
 
 </body>
