--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <div><a href="htmlCSSone/index.html">html + CSS - 1</a></div>
         <div><a href="htmlCSStwo/index.html">html + CSS - 2</a></div>
         <div class="aboutWhat">Итоговые работы</div>
-        <div><a href="modulOne/index.html">Экзамен №1</a></div>
-        <div><a href="modulTwo/index.html">Экзамен №2</a></div>
+        <div><a href="modulOne/index.html">Экзамен №1 (html+css)</a></div>
+        <div><a href="modulTwo/index.html">Экзамен №2 (+=JS)</a></div>
         <div class="aboutWhat">Ссылки на меня</div>
         <div><a href="https://docs.google.com/document/d/15EITVxn6KbJTgRFqCSsKMoEpBH127MlqVlbSghuAhx0/edit?usp=sharing">Резюме</a></div>
         <div><a href="https://github.com/goGetttter">Ссылка GidHab</a></div>
