--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" type="image/jpg" href="icon.png">
     <meta name="description" content="Пенза, web-developer, portfolio. Веб-разработчик в пензе">
     <meta name="keywords" content="Пенза, web-developer, portfolio">
-    <title>Document</title>
+    <title>goGetttter</title>
 </head>
 <body>
 
