--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="item">Портфолио web-developer</div>
     <div class="item">Архипов А.В.</div>
-    <div class="item">Здесь должно быть что то о себе...</div>
+    <div class="item">Здесь должно быть что-то о себе...</div>
     <div class="item">У меня есть ссылочки   (;</div>
 
     <div class="links">
